--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -121,12 +121,11 @@
 
   <!-- cart icon for small devices -->
   <div id="cartsmall">
-
     <a href="./add_cart.html">
       <div class="cartbackground">
         <i class="fa fa-shopping-bag"></i>
-
       </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
     </a>
   </div>
 
