--- a/pages/signin.html
+++ b/pages/signin.html
@@ -119,7 +119,14 @@
 
   </header>
   <!-- Dont Delete or Edit End  -->
-
+  <div id="cartsmall">
+    <a href="./add_cart.html">
+      <div class="cartbackground">
+        <i class="fa fa-shopping-bag"></i>
+      </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
+    </a>
+  </div>
   <!-- Start Your Code Here  -->
 
   <div class="container sign_content ">
