--- a/index.html
+++ b/index.html
@@ -120,10 +120,9 @@
     <a href="./pages/add_cart.html">
       <div class="cartbackground">
         <i class="fa fa-shopping-bag"></i>
-
       </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
     </a>
-
   </div>
   <!-- cart icon for small devices -->
 
