--- a/pages/contact.html
+++ b/pages/contact.html
@@ -127,12 +127,11 @@
 
   <!-- cart icon for small devices -->
   <div id="cartsmall">
-
     <a href="./add_cart.html">
       <div class="cartbackground">
         <i class="fa fa-shopping-bag"></i>
-
       </div>
+      <div class="small-cart-value"> <span> 0 </span></div>
     </a>
   </div>
   <!-- Dont Delete or Edit End  -->
