--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div class="col-md-4 d-flex justify-content-end" onClick="window.location='/pages/signin.html';">
           <div class="signinDiv text-center">
-            <a href=/pages/signin.html>Sign in</a>
+            <a href=./pages/signin.html>Sign in</a>
           </div>
           <div class="registerDiv">
-            <a href="/pages/signin.html">Register</a>
+            <a href="./pages/signin.html">Register</a>
           </div>
         </div>
       </div>
