feedback / sign / special opper ui

--- a/pages/login.html
+++ b/pages/login.html
@@ -127,84 +127,50 @@
   </div>
   <!-- Start Your Code Here  -->
 
-  <div class="container sign_content col-6">
-
+  <div class="container sign_content col-sm-12 col-md-8" >
     <div class="row text-center">
-      <h1 class="text-60">My Account</h1>
+      <h1 class="text-60">Login In</h1>
       <hr>
-    </div>
-    <div class="row d-flex mx-auto justify-content-center">
-      <a href="./login.html" class="btn loginButton text-white ">Login</a>
-
-      <a href="./register.html" class="btn loginButton text-white ">Register</a>
-
     </div>
 
     <!-- login -->
-    <!-- <div class="col-md-6 pe-5">
-        <div class="row">
-          <div class="col-md-12 mt-4 mb-3">
-            <h3 class="text-30 font-semibold">Login</h3>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group mb-4">
-              <label for="email" class="font-medium mb-2">Username Or Email address<span
-                  class="text-red-700">*</span></label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email">
-              <small id="email" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-group mb-4">
-              <label for="password" class="font-medium mb-2">Password<span class="text-red-700">*</span></label>
-              <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-          </div>
-          <div class="col-md-12">
-            <div class="form-check mb-4">
-              <input class="form-check-input" type="checkbox" value="" id="remember_me" checked>
-              <label class="form-check-label" for="remember_me" class="font-medium">
-                Remember Me
-              </label>
-            </div>
-          </div>
-          <div class="col-md-12">
-            <a class="btn loginButton text-white ">Login</a>
-          </div>
+    <div class="col-md-8 mx-auto justify-content-center d-flex text">
+      <div class="row">
 
-
-          <div class="col-md-12">
-            <div class="col-md-3">
-              <a href="" class="underline">Frogot Password?</a>
-            </div>
+        <div class="col-md-12">
+          <div class="form-group mb-4">
+            <label for="email" class="font-medium mb-2">Username Or Email address<span
+                class="text-red-700">*</span></label>
+            <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email">
+            <small id="email" class="form-text text-muted">We'll never share your email with anyone else.</small>
           </div>
         </div>
-      </div> -->
-
-    <!-- register -->
-    <!-- <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12 mt-4 mb-3">
-            <h3 class="text-30 font-semibold">Register</h3>
+        <div class="col-md-12">
+          <div class="form-group">
+            <label for="password" class="font-medium mb-2">Password<span class="text-red-700">*</span></label>
+            <input type="password" class="form-control" id="password" placeholder="Password">
           </div>
-          <div class="col-md-12">
-            <div class="form-group mb-4">
-              <label for="email" class="font-medium mb-2">Email address<span class="text-red-700">*</span></label>
-              <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter email">
-            </div>
-          </div>
-
-          <div class="col-md-12  mb-4">
-            <p>A link to set a new password will be sent to your email address.<br/><br/>
-
-              Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in  <a href="" class="hover:underline"><span class="font-bold">our privacy policy</span></a>.</p>
-          </div>
-
-          <div class="col-md-12">
-            <a class="btn text-white loginButton">Register</a>
+          <div class="col-md-12 mb-4">
+            <a href="" class="underline" style="color: black;">Frogot Password?</a>
           </div>
         </div>
-      </div> -->
+        <div class="col-md-12">
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" value="" id="remember_me" checked>
+            <label class="form-check-label" for="remember_me" class="font-medium">
+              Remember Me
+            </label>
+          </div>
+        </div>
+        <div class="col-md-12 justify-content-center d-flex">
+          <a class="btn loginButton text-white ">Login</a>
+        </div>
+
+
+       
+      </div>
+    </div>
+
   </div>
 
   </div>
