--- a/pages/menu.html
+++ b/pages/menu.html
@@ -49,10 +49,10 @@
         </div>
         <div class="col-md-4 d-flex justify-content-end" onClick="window.location='./signin.html';">
           <div class="signinDiv text-center">
-            <a href="./signin.html">Sign in</a>
+            <a href="./login.html">Sign in</a>
           </div>
           <div class="registerDiv">
-            <a href="./signin.html">Register</a>
+            <a href="./register.html">Register</a>
           </div>
         </div>
       </div>
