--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div class="col-md-4 d-flex justify-content-end" onClick="window.location='/pages/signin.html';">
           <div class="signinDiv text-center">
-            <a href=./pages/signin.html>Sign in</a>
+            <a href=./pages/login.html>Sign in</a>
           </div>
           <div class="registerDiv">
-            <a href="./pages/signin.html">Register</a>
+            <a href="./pages/register.html">Register</a>
           </div>
         </div>
       </div>
@@ -95,10 +95,8 @@
           </ul>
 
           <div class="d-flex d-none d-md-block justify-content-end " onClick="window.location='./pages/add_cart.html';">
-            <div
-              class="mainCart p-3 cart ">
-              <svg class="me-2 text-red" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                viewBox="0 0 16 16">
+            <div class="mainCart p-3 cart ">
+              <svg class="me-2 text-red" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 16">
                 <path fill="currentColor" fill-rule="evenodd"
                   d="M6.75 1A5.75 5.75 0 0 0 1 6.75v.518a2 2 0 0 0 0 3.464v1.518A2.75 2.75 0 0 0 3.75 15h8.5A2.75 2.75 0 0 0 15 12.25v-1.518a2 2 0 0 0 0-3.464V6.75A5.75 5.75 0 0 0 9.25 1h-2.5ZM14 8.5H2a.5.5 0 0 0 0 1h12a.5.5 0 0 0 0-1ZM13.5 7v-.25A4.25 4.25 0 0 0 9.25 2.5h-2.5A4.25 4.25 0 0 0 2.5 6.75V7h11ZM11 11h2.5v1.25c0 .69-.56 1.25-1.25 1.25h-8.5c-.69 0-1.25-.56-1.25-1.25V11H9l1 1l1-1Z"
                   clip-rule="evenodd" />
@@ -107,7 +105,7 @@
               <div class="cartCount cart"><span class="m-2 text-white">0</span></div>
             </div>
           </div>
-         
+
         </div>
       </div>
     </nav>
@@ -275,12 +273,146 @@
           </div>
         </div>
 
-        <div class="col-md-6 offer-div">
-
+        <div class="col-md-6 p-0 offer-div"> <!-- Set the desired height here -->
+          <div id="carouselExampleIndicators" class="carousel slide h-100 w-100" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner h-100">
+              <div class="carousel-item active h-100">
+                <img src="./assets/img/home_page/offer/img1.jpg" class="d-block w-100 h-100" style="object-fit: cover; "alt="...">
+              </div>
+              <div class="carousel-item h-100">
+                <img src="./assets/img/home_page/offer/img2.jpg" class="d-block w-100 h-100" style="object-fit: cover; height: 100%;" alt="...">
+              </div>
+              <div class="carousel-item h-100">
+                <img src="./assets/img/home_page/offer/img3.jpg" class="d-block w-100 h-100" style="object-fit: cover; height: 100%;" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
+        
       </div>
     </div>
 
+  </section>
+
+  <section class="feedback">
+    <div class="container mt-5 mb-5">
+
+      <div class="row g-2">
+        <div class="col-md-4">
+          <div class="card p-3 text-center px-4">
+
+            <div class="user-image">
+
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSuFhULeO7UdYRQz3spoAbnazI0Zebr6ivyg&s"
+                class="rounded-circle" width="80">
+
+            </div>
+
+            <div class="user-content">
+
+              <h5 class="mb-0">Akila Nilusha</h5>
+              <!-- <span>Software Developer</span> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+
+            </div>
+
+            <div class="ratings">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-md-4">
+
+          <div class="card p-3 text-center px-4">
+
+            <div class="user-image">
+
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSuFhULeO7UdYRQz3spoAbnazI0Zebr6ivyg&s"
+                class="rounded-circle" width="80">
+
+            </div>
+
+            <div class="user-content">
+
+              <h5 class="mb-0">Akila Nilusha</h5>
+              <!-- <span>Web Developer</span> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+
+            </div>
+
+            <div class="ratings">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-4">
+
+          <div class="card p-3 text-center px-4">
+
+            <div class="user-image">
+
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSuFhULeO7UdYRQz3spoAbnazI0Zebr6ivyg&s"
+                class="rounded-circle" width="80">
+
+            </div>
+
+            <div class="user-content">
+
+              <h5 class="mb-0">Akila Nilusha</h5>
+              <!-- <span>Software Architect</span> -->
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+
+            </div>
+
+            <div class="ratings">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+
+    </div>
   </section>
 
   <footer id="footerSection" class="mt-4 pt-4 pb-3">
@@ -394,7 +526,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-    <script src="./script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
