--- a/pages/signin.html
+++ b/pages/signin.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body class="signin_background">
+<body class="">
   <!-- Dont Delete or Edit start  -->
   <header class="bg-white sticky-top">
     <div class="row  d-none d-md-block top-header-div mx-auto overflow-hidden">
@@ -127,10 +127,10 @@
   </div>
   <!-- Start Your Code Here  -->
 
-  <div class="container sign_content col-6">
+  <div class="container sign_content col-sm-12 col-md-8">
 
-    <div class="row text-center">
-      <h1 class="text-60">My Account</h1>
+    <div class="row text-center pt-4">
+      <h1 style="font-size: 50px;">Join With Us</h1>
       <hr>
     </div>
     <div class="row d-flex mx-auto justify-content-center">
