--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> <!--Bootstarop css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Font Awesome-->
   <title>Flavor Fiest | HOME</title>
   <link rel="stylesheet" href="style.css">
 
@@ -47,7 +47,7 @@
         <div class="col-md-4 col-sm-8 ">
           <h1 class="site-name text-center ">Flavor Fiest</h1>
         </div>
-        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='/pages/signin.html';">
+        <div class="col-md-4 d-flex justify-content-end" >
           <div class="signinDiv text-center">
             <a href=./pages/login.html>Sign in</a>
           </div>
