--- a/pages/menu.html
+++ b/pages/menu.html
@@ -47,7 +47,7 @@
         <div class="col-md-4 col-sm-8 ">
           <h1 class="site-name text-center ">Flavor Fiest</h1>
         </div>
-        <div class="col-md-4 d-flex justify-content-end" onClick="window.location='./signin.html';">
+        <div class="col-md-4 d-flex justify-content-end"ß>
           <div class="signinDiv text-center">
             <a href="./login.html">Sign in</a>
           </div>
