--- a/pages/add_cart.html
+++ b/pages/add_cart.html
@@ -476,7 +476,8 @@
     }
 
     function PlaceOrder() {
-      var url = "http://localhost/project/FlavorFiest/";
+      //var url = "http://localhost/project/FlavorFiest/";
+      var url = "https://akilanilusha.github.io/FlavorFiest/mail.php";
       const PayForm = document.forms['PayDetailForm'];
       var f_name = PayForm['f_name'].value;
       let l_name = PayForm['l_name'].value;
